third_party/move/move-compiler-v2/tests/checking/typing/continue_outside_loop.exp
// -- Model dump before bytecode pipeline
module 0x8675309::M {
    private fun foo() {
        loop {
          if true {
            continue
          } else {
            break
          }
        };
        continue
    }
} // end 0x8675309::M


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/checking/typing/continue_outside_loop.move:6:9
  │
6 │         continue
  │         ^^^^^^^^
